# archivator

./: LICENSE  README.md  pyproject.toml
archivator/: archivator.py  archiveorg.py  cli.py  main.py
archivator/cli/: cli.py  validators.py
archivator/console/: application.py  archive.py  cli.py  exceptions.py  validators.py
tests/: test_archivator.py
