[tool.poetry]
name = "archivator"
version = "0.1.0"
description = ""
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
internetarchive = "^1.9.2"
loguru = "^0.4.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
