[tool.poetry]
name = "archivator"
version = "0.1.0"
description = ""
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
internetarchive = "^1.9.2"
url-normalize = "^1.4.1"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
archivator = "archivator.console.application:cli"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

